--- a/PythonProjects/ArtGallery/app/templates/index.html
+++ b/PythonProjects/ArtGallery/app/templates/index.html
@@ -3,7 +3,14 @@
 <head>
     <title>Art Gallery</title>
     <style>
-        
+        .gallery-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .gallery-image {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -14,7 +21,7 @@
 
     <script>
         function fetchNewImage() {
-            window.location.reload();
+            window.location.href = '/random-image/';  // Redirect to the view that fetches a new image
         }
     </script>
 </body>
