updated views and index.html to account for random image display on each page load. Passes random # from view to template.

--- a/PythonProjects/art_gallery/gallery/templates/index.html
+++ b/PythonProjects/art_gallery/gallery/templates/index.html
@@ -3,7 +3,8 @@
 <body>
 
 <h1>Art Gallery</h1>
-<p>Welcome to my first Django project!</p>
+
+<img src="https://picsum.photos/800/600?random={{ random_number }}" alt="Random Art">
 
 </body>
 </html>
