added button to reload page

--- a/PythonProjects/art_gallery/gallery/templates/index.html
+++ b/PythonProjects/art_gallery/gallery/templates/index.html
@@ -18,6 +18,9 @@
         }
     </style>
 </head>
+
+<button onclick="window.location.reload();">New Image</button>
+
 <body>
 
 <h1>Art Gallery</h1>
